# Autonomous-Driving

./: README.md  SOTA For DRL&AD.md
CARLA/CARLA_AD_challenge/: CarlaEnv.py  README.md  RLagent.py  challenge_evaluator_routes.py  challenge_evaluator_s2e.py  dqn.py  dqn_per.py  test_scenario.py  user_scenario.json  util.py  训练框架和自定义场景使用指南.md
CARLA/CARLA_AD_challenge/Track4_basic_agent/: FollowLeadingVehicle.xml  README.md  Track4Agent.py  autonomous_agent.py  behavioural_planner.py  controller2d.py  test_scenario.py  velocity_planner.py
CARLA/decision-making-CarND/: environment.yaml
CARLA/decision-making-CarND/CarND-test/src/: main.cpp
DATASETS/Intelligent-driving-data-set/: README.md
LabHardware/HesaiLidarSDK/: CMakeLists.txt  README.md
LabHardware/HesaiLidarSDK/include/: calibration.h  hesaiLidarSDK.h  hesaiLidarSDK_IN.h  input.h  pandora_types.h  point_types.h  rawdata.h  utilities.h
LabHardware/HesaiLidarSDK/sample/pandar40/: CMakeLists.txt  pandar40.cc
LabHardware/HesaiLidarSDK/sample/pandar40p/: CMakeLists.txt  pandar40p.cc
LabHardware/HesaiLidarSDK/sample/pandora/: CMakeLists.txt  pandora.cc
LabHardware/HesaiLidarSDK/src/: calibration.cc  hesaiLidarSDK.cc  hesaiLidarSDK_IN.cc  input.cc  rawdata.cc  test.cc  utilities.cc
Open-RL-Torcs/: install.md  requirements.txt
Open-RL-Torcs/li_torcs/: environment.py  main.py  tmp.py  torcs_net.py  utils.py
Open-RL-Torcs/li_torcs/kaffe/tensorflow/: network.py
Open-RL-Torcs/li_torcs/pre-trained/: 183337.ckpt.data-00000-of-00001  torcs_net.npy
Open-RL-Torcs/li_torcs/torcsnet.keras/: agent.py  autostart.sh  ddpg_networks.py  delete_me.py  environment.py  lqr_agent.py  main.py  main_lqr.py  plot.py  test_mtl_unknown_track.py  utils.py
Open-RL-Torcs/tf_steer_play/: agent.py  autostart.sh  ddpg_networks.py  environment.py  main.py  utils.py
Open-RL-Torcs/torcs-1.3.7/: Make-config  README  configure  configure.in
Open-RL-Torcs/torcs-1.3.7/CVS/: Entries
Open-RL-Torcs/torcs-1.3.7/doc/faq/: faq.html
Open-RL-Torcs/torcs-1.3.7/src/doc/: torcsdoc.conf.in  torcsdoc.h
Open-RL-Torcs/torcs-1.3.7/src/interfaces/: car.h  playerpref.h  raceman.h  simu.h  track.h
Open-RL-Torcs/torcs-1.3.7/src/raceman/: practice.xml  quickrace.xml  quickrace2.xml
Papers/: SOTA For DRL&AD.md
Papers/code/campus_road_segmentation/: readme.md  transform.py
Papers/code/coolhigh_ws/: README.md
Papers/code/coolhigh_ws/src/: egalcarREADME.md
Papers/code/coolhigh_ws/src/dbc/: package.xml  readme.md
Papers/code/coolhigh_ws/src/dbc/include/dbc/: Dbc.h  DbcMessage.h  LineParser.h
Papers/code/coolhigh_ws/src/dbc/src/: DbcMessage.cpp  DbcSignal.cpp
Papers/paper/localization/: README.md
Real-Vehicle/code/: README.md
Real-Vehicle/code/campus_road_segmentation/: eval_campus.py  road_seg.py
Real-Vehicle/code/coolhigh_ws/src/dbc/: CMakeLists.txt
Real-Vehicle/code/coolhigh_ws/src/dbc/include/dbc/: DbcBuilder.h  DbcSignal.h
Real-Vehicle/code/coolhigh_ws/src/dbc/src/: Dbc.cpp  DbcBuilder.cpp  DbcUtilities.h  LineParser.cpp
Real-Vehicle/code/coolhigh_ws/src/dbw_coolhigh_can/: CMakeLists.txt  Mobileye.dbc  New_Eagle_DBW_3.3.388.dbc  ch_agv-1.3.6.dbc  nodelets.xml  package.xml
Real-Vehicle/code/coolhigh_ws/src/dbw_coolhigh_can/launch/: dbw.launch  dbw_all.launch  debug.launch
Real-Vehicle/code/coolhigh_ws/src/dbw_coolhigh_can/scripts/: startup_dbw.bash  startup_joystick_rviz.bash
Real-Vehicle/code/coolhigh_ws/src/dbw_coolhigh_can/src/: DbwNode.cpp  DbwNode.h  node.cpp
Real-Vehicle/code/coolhigh_ws/src/remote_control/: CMakeLists.txt  package.xml  read.md
Real-Vehicle/code/coolhigh_ws/src/remote_control/src/: node.cpp
Scenarios/: README.md  Scenario related.md  carla_version_problem.md
TORCS/End-to-end-torcs/: README.md
TORCS/End-to-end-torcs/Dagger-Torcs/: MSE.py  README.txt  dagger.py  data.txt  results.txt  test.py
TORCS/End-to-end-torcs/End-to-End/: README.txt  driving_data_test.py  model.py  run_dataset_test.py  run_torcs_test.py  test.py  train_test.py
TORCS/Torcs-data-collection/: .gitignore  README.md  autostart.sh  environment.py  main.py  utils.py
TORCS/rl-torcs/: README.md  requirements.txt
TORCS/rl-torcs/li_torcs/: agent.py  delete_me.py  plot.py  test_plot_speed.py
TORCS/rl-torcs/tf_steer_play/: plot.py  replay_memory.py
TORCS/rl-torcs/torcs-1.3.7/: .torcs.rc  config.h  config.status  setup_linux.sh  uninstall.sh
TORCS/traffic-sign-detection-challenge/: README.md  analyze_dataset.py  cleanup_tsinghua_annotations.py  convert_2017_test_xml_to_json.py  convert_2018_xml_to_json.py  create_2018_test_video.py  create_additional_dataset.py  create_additional_dataset_tfrecord.py  create_full_tf_record.py  create_full_tsd_2018_official_cat_one_class.py  create_patchnet_dataset.py  create_tsd_tf_record.py  eval_full.py  eval_tsinghua.py  export_full_model.sh  export_full_tsd_official_aug.sh  export_tsinghua_model.sh  generate_2018_patchnet_additional_dataset.py  label_dict_custom_to_official2018.json  label_dict_idx_to_custom.json  label转换关系.xlsx  main.py  patchnet.py  repairer.py  train_full.sh  train_full_tsd_official_aug.sh  train_patchnet.py  train_tsinghua.sh  tsd_label_map_classification.pbtxt  tsinghua_annotations_clean.json  utils.py  xml_writer.py
TORCS/traffic-sign-detection-challenge/data/: tsd_label_map_detection.pbtxt  tsd_label_map_detection_one_category.pbtxt  tsd_label_map_patchnet.pbtxt
TORCS/traffic-sign-detection-challenge/protos/: string_int_label_map.proto  string_int_label_map_pb2.py
decision-making-CarND/: README.md
gym-sumo/: setup.py
gym-sumo/config/basic/: basic.sumocfg  basic_dense.rou.xml  sumo.net.xml  sumo.settings.xml  sumo.sumocfg  sumo_dense2.rou.xml  sumo_left.rou.xml  sumo_right.rou.xml
gym-sumo/config/huawei/: sumo.settings.xml  sumo.sumocfg  sumo_left.rou.xml  sumo_right.rou.xml
gym-sumo/experiments/: junction_turning.py
gym-sumo/experiments/DQN/: eval.py  train.py
gym-sumo/gym_sumo/: __init__.py
gym-sumo/gym_sumo/envs/: __init__.py  gym_sumo.py
gym-sumo/test/: test_listmean.py  test_register.py  test_usage.py
(+231 files in other folders)
